drivers/net/ethernet/jme.c
@@ -3312,12 +3312,13 @@ jme_resume(struct device *dev)
 		jme_reset_phy_processor(jme);
 	jme_phy_calibration(jme);
 	jme_phy_setEA(jme);
-	jme_start_irq(jme);
 	netif_device_attach(netdev);
 
 	atomic_inc(&jme->link_changing);
 
 	jme_reset_link(jme);
+
+	jme_start_irq(jme);
 
 	return 0;
 }
